--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
                         компания краткая инфа о том чем занимается компания</p>
                 </div>
                 <div class="content__right">
-                    <div class="content__logo-wrap">
-                        <img src="img/avito.png" alt="" class="content__logo">
+                    <img src="img/pie.svg" class="content__pie">
+                    <!-- <div class="content__logo-wrap"> -->
+                        <!-- <img src="img/avito.png" alt="" class="content__logo">
                         <img src="img/cian.png" alt="" class="content__logo">
                         <img src="img/domofond.png" alt="" class="content__logo">
-                        <img src="img/yandexnedvizh.png" alt="" class="content__logo content__logo_back">
+                        <img src="img/yandexnedvizh.png" alt="" class="content__logo">
                         <img src="img/moveru.png" alt="" class="content__logo">
                         <img src="img/ula.png" alt="" class="content__logo">
-                    </div>
-                    <div class="content__hidden-text">sold, <br> избавим вас от всех хлопот</div>
+                    </div> -->
+                    <!-- <div class="content__hidden-text">sold, <br> избавим вас от всех хлопот</div> -->
                 </div>
             </div>
         </div>
@@ -70,6 +71,6 @@
             </div>
         </footer>
     </div>
+    <script src=""></script>
 </body>
-
 </html>
